# junctions

./: CMakeLists.txt  LICENSE  README.md
cmake/: sfml.cmake
example/: CMakeLists.txt  example.cpp
include/junctions/: Entity.h  EntityManager.h  SystemManager.h  entity.h  entity_manager.h  event_manager.h  pool.h  system_manager.h  utils.h
src/: Entity.cpp  EntityManager.cpp  SystemManager.cpp  entity.cpp  entity_manager.cpp  event_manager.cpp  system_manager.cpp
tests/: EntityManagerTests.cpp  SystemManagerTests.cpp  entity_manager_tests.cpp  event_manager_tests.cpp  pool_tests.cpp  system_manager_tests.cpp
